theme-src/styles/styles.less
@import "_variables";
@import "_bootstrap";
@import "@{commons-ui-path}resources/less/cam-sites-common.less";

html,
body {
  min-height: 100%;
  position: relative;
}

.link-no-decoration();

.centered-content() {
  max-width: @layout-width;
  margin-left: auto;
  margin-right: auto;

  @media (max-width: 768px) {
    padding-left: 5px;
    padding-right: 5px;
  }
}


body > header {
  position: fixed;
  top: 0;
  z-index: 20;
  width: 100%;
  padding-left: @grid-gutter-width;
  padding-right: @grid-gutter-width;
  background-color: fade(@body-bg, 95);
  box-shadow: 0 0 0 0 fade(@gray, 50%);
  transition: box-shadow 0.218s ease;

  height: @header-height;
  border-bottom: @header-border-bottom-width solid @header-border-bottom-color;
  color: @navbar-default-color;
  background-color: @navbar-default-bg;
  font-size: @navbar-font-size;

  a {
    color: @navbar-default-link-color;
    &:hover,
    &:focus {
      color: @navbar-default-link-hover-color;
    }
  }

  > div {
    .centered-content();
    min-height: @header-computed-height;
  }

  h1 {
    float: left;
    padding-right: @grid-gutter-width * 0.5;
    font-size: 20px;
    font-weight: 400;
    margin: 0;
    line-height: @header-computed-height;
  }

  .brand-logo:before {
    color: @brand-primary;
    display: inline-block;
    font-family: "bpmn";
    font-style: normal;
    font-weight: normal;
    content: '\e831';
  }

  .grill,
  .search-field {
    float: right;
    margin-top: 8px;
    margin-left: @grid-gutter-width * 0.5;
  }
  .grill {
    margin-top: 10px;
    margin-right: -6px;
  }
  .search-field {
    input {
      max-width: 100%;
    }
  }


  .bpmn-icon-bpmn-io:before {
    margin-left: -2px;
  }


  @media (max-width: 480px) {
    .search-field {
      display: none;
    }
  }

  @media (max-width: 480px) {
    .search-field {
      max-width: 180px;
    }
  }

  @media (max-width: 600px) {
    h1 {
      padding-right: 0;
    }
  }

  .categories {
    text-align: right;
    ul,
    li {
      margin: 0;
      padding: 0;
      display: inline-block;
    }
    ul {
      list-style: none;
    }
    li {
      &:after {
        display: inline-block;
        content: '/';
      }
      &:last-of-type:after {
        display: none;
      }
    }
  }
}










.page-wrapper {
  overflow: hidden;
  position: relative;
  z-index: 1;
  top: @header-height;
  margin-bottom: @footer-height + @grid-gutter-width;
  width: 100%;
}


.page-content {
  overflow: hidden;
  padding-left: @grid-gutter-width;
  padding-right: @grid-gutter-width;

  .link(@link-color, @link-hover-color);
  .link-no-decoration();

  h1,
  h2,
  h3,
  h4,
  h5 {
    margin-top: @line-height-computed * 2;
    .link(@text-color, @text-color);
    .link-no-decoration();
  }

  > header {
    .centered-content();
  }

  > article,
  > section {
    margin: @grid-gutter-width 0;
    &:last-of-type {
      margin-bottom: 0;
    }

    > header,
    > footer {
      > * {
        .centered-content();
      }
    }
  }

  .content-wrapper {
    .centered-content();

    > pre,
    > blockquote,
    > .bpmn-viewer,
    > figure {
      &:not(.teaser) {
        margin-left: @grid-gutter-width * -1;
        margin-right: @grid-gutter-width * -1;
      }

      // @media (max-width: 768px) {
      //   padding: (@line-height-computed / 2) @line-height-computed;
      // }
    }

    > pre,
    > blockquote,
    > .bpmn-viewer {
      padding: (@line-height-computed / 2) @grid-gutter-width;
      width: auto;
      max-width: @layout-width + (@grid-gutter-width * 2);

      @media (max-width: 768px) {
        padding: (@line-height-computed / 2) @line-height-computed;
      }
    }

    > blockquote {
      padding-left: (@grid-gutter-width - 5px);
    }

    > pre {
      padding-left: (@grid-gutter-width - 1px);
      padding-right: (@grid-gutter-width - 1px);
    }

    > figure {
      max-width: @layout-width + (@grid-gutter-width * 2);
      &.no-border {
        max-width: 1280px;
      }
    }
  }


  table a:after {
    display: none;
  }
}


body > footer {
  position: fixed;
  bottom: 0;
  z-index: 5;
  width: 100%;
  padding-left: @grid-gutter-width;
  padding-right: @grid-gutter-width;
  background-color: fade(@body-bg, 95);
  border-top: 1px solid @gray-lighter;

  @media (max-width: 1024px) {
    position: relative;
  }

  > div {
    height: @footer-height;

    > div,
    > nav {
      float: left;
    }
    > div {
      width: 30%;
    }
    > nav {
      width: 40%;
    }
  }

  .boring-stuff,
  .back-to-top,
  .networks {
    padding: (@line-height-computed * 0.5) 0;
    line-height: @line-height-computed;
  }

  .boring-stuff,
  .back-to-top {
    font-size: 14px;
  }

  .networks {
    font-size: 20px;
  }

  .back-to-top {
    text-align: right;
  }

  ul {
    margin-bottom: 0;
  }
}


figure {
  text-align: center;
  margin-top: (@line-height-computed / 2);
  margin-bottom: (@line-height-computed / 2);

  .wrapping {
    display: inline-block;
    padding: 2px;
    border: 1px solid #ccc;
    background-color: @body-bg;
    overflow: hidden;
    width: 100%;

    > img {
      max-width: 100%;
      min-width: @grid-gutter-width;
      min-height: @grid-gutter-width;
      position: relative;
      margin: auto;
      display: block;
    }

    > figcaption {
      text-align: left;
      margin-top: 2px;
      border-top: 1px solid #ccc;
      font-style: italic;

      h4,
      p {
        margin: 12px 12px 10px 12px;
        line-height: 18px;
      }

      h4 {
        float: left;
        font-size: 16px;
        margin-top: (@line-height-computed / 2);
      }

      p {
        float: right;
        font-size: 14px;
      }
    }
  }

  &.no-border {

    .wrapping {
      border: none;

      > figcaption {
        border-top: none;

        h4, p {
          float: none;
        }
      }
    }
  }

  &.teaser {
    .wrapping {
      background: none;

      > figcaption {
        h4, p {
          text-align: center;
        }
      }
    }
  }
}

img[data-src]{
  position: relative;
  min-height: 120px;

  &:after {
    position: absolute;
    display: block;
    content: '';
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
  }
}


article,
section {
  .meta {
    font-size: small;
  }

  > .content {
    margin-top: @line-height-computed;// * 2;
    font-family: @font-family-sans-serif;
    font-size: 17px;
    line-height: 28px;

    h1 { font-size: @font-size-h1 * 0.85; }
    h2 { font-size: @font-size-h2 * 0.85; }
    h3 { font-size: @font-size-h3 * 0.85; }
    h4 { font-size: @font-size-h4 * 0.85; }
    h5 { font-size: @font-size-h5 * 0.85; }
    h6 { font-size: @font-size-h6 * 0.85; }
  }

  > .comments {
    max-width: @layout-width;
    margin: @grid-gutter-width auto;
    min-height: 10px;
  }

  > footer {
    font-size: 14px;
    margin-top: @grid-gutter-width;
    border-bottom: 1px dashed @gray-lighter;
    margin-bottom: @grid-gutter-width;
    padding-bottom: @grid-gutter-width;

    > div {
      overflow: hidden;
      &:first-of-type {
        margin: @padding-base-vertical auto;
        padding: (@padding-base-vertical * 2) 0;
        border: 1px dashed @gray-light;
        border-width: 1px 0;
      }
    }

    .tags,
    .author,
    .previous-post,
    .next-post {
      width: 50%;
      min-height: 1px;
      float: left;
    }

    .tags,
    .next-post {
      padding-right: @grid-gutter-width * 0.5;
    }

    .author,
    .previous-post {
      padding-left: @grid-gutter-width * 0.5;
      text-align: right;
    }

    .tags ul {
      display: inline;
    }

    .next-post,
    .previous-post {
      font-size: 16px;
    }
  }
}

.page-content.list {
  > article,
  > section {
    > footer {
      > div:first-of-type {
        border: none;
        margin-top: 0;
        margin-bottom: 0;
      }
    }
  }
}

.read-more-link {
  text-align: right;
}



.archives-list .content > ul {
  list-style: none;
  padding-left: 0;
}

.bpmn-viewer {
  margin: (@grid-gutter-width * 0.5) 0;
  box-shadow: 0 0 5px #aaa inset;
  overflow: hidden;
}

[data-bpmn-diagram] {
  padding: 0;
  position: relative;

  .bjs-container {
    > .bjs-powered-by > img {
      max-width: 5vw;
    }
  }
}

[data-bpmn-diagram],
figure .wrapping {
  &.loading {
    min-height: 20vh;
    position: relative;
    &:before,
    &:after {
      position: absolute;
      left: 0;
      width: 100%;
      display: block;
    }

    &:before {
      background-color: @body-bg;
      z-index: 999;
      content: '';
      top: 0;
      height: 100%;
    }

    &:after {
      z-index: 1000;
      content: 'Loading…';
      text-align: center;
      top: 50%;
      height: 32px;
      line-height: 32px;
      margin-top: -16px;
    }
  }
}

.lightbox {
  position: fixed;
  overflow: hidden;
  left: 0;
  right: 0;
  top: 0;
  bottom: 100%;
  transition: bottom 0.218s ease;
  background-color: fade(@gray-lighter, 80);
  z-index: @zindex-navbar-fixed + 9;
  cursor: pointer;

  .content {
    max-width: 100%;
    max-height: 100%;
    overflow: auto;
    position: absolute;
    top: 50%;
    left: 50%;
    border: 1px solid @gray-light;
    padding: 3px;
    background-color: #fff;
    box-shadow: 0 0 15px 2px fade(@gray, 50);
  }

  img {
    display: block;
    max-width: 100%;
    background-color: #fff;
  }

  &.open {
    bottom: 0;
  }
}

figure.clickable {
  position: relative;
  overflow: hidden;
  cursor: pointer;

  > span {
    border-color: @link-color;
  }

  &:before,
  &:after {
    display: block;
    position: absolute;
  }

  &:before {
    width: @grid-gutter-width;
    height: @grid-gutter-width;
    top: 1px;
    right: 1px;
    font-family: 'Glyphicons Halflings';
    font-style: normal;
    font-weight: normal;
    font-size: 18px;

    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    content: '\e140';
    z-index: 2;
    color: #fff;

    transition: font-size 0.128s ease,
                top 0.128s ease,
                right 0.128s ease,
                width 0.128s ease,
                height 0.128s ease;
  }
  &:after {
    width: @grid-gutter-width * 2.6;
    height: @grid-gutter-width * 2.6;
    top: 0 - (@grid-gutter-width * 1.3);
    right: 0 - (@grid-gutter-width * 1.3);
    content: '';
    z-index: 1;
    background-color: fade(@link-color, 90);
    transform: rotateZ(45deg);
  }

  &:hover:before {
    width: @grid-gutter-width + 4;
    height: @grid-gutter-width + 4;
    top: 0px;
    right: 0px;
    font-size: 22px;
  }
}


iframe {
  margin-left: auto;
  margin-right: auto;
  width: 100%;
}


@import "./pager.less";
@import "./icons.less";
@import "./sidebar.less";
@import "./prism.less";
@import "./search.less";




@media (max-width: 768px) {
  .sidebar-content {
    padding: 5px;
    > div.col {
      margin: 0;
      overflow: hidden;
      h4 {
        margin: 5px 0;
      }
    }
  }

  body > header,
  body > footer,
  .page-content {
    padding-left: 0;
    padding-right: 0;
  }
  .read-more-link {
    padding-left: 5px;
    padding-right: 5px;
  }

  article,
  section {
    > header > h1 {
      font-size: 3rem;
    }
    > footer > div:first-of-type {
      padding: (@padding-base-vertical * 2) 5px;
    }
  }
}

